objects/NGCC_QA_and_Lead_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Call_Status__c</fullName>
        <description>Corresponding Call Status for the Disposition value</description>
        <label>Call Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>Addition field need to be updated when the disposition is selected .API name of Lead attribute which need to be updated</description>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <description>Desired value to be set for the additional fields</description>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>Values should only be these
DateTime
Boolean
Numeric
Date
CharLimit-40</description>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>If Lead Status also need to be update along with Disposition then desired value</description>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Call Disposition - Additional or Call Disposition
a.	Call Disposition - Additional : When addition field is defined to be update
b.	Call Disposition: When only Disposition need to be update</description>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>Comma separated Theater Name as in when needed

Americas,EMEAR,APJ,Greater China</description>
        <label>Theater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>True_Value__c</fullName>
        <description>If in case checkbox at lead level then specify what value crossponding value</description>
        <label>True Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Lead_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Lead Status need to be Updated then set it as true</description>
        <label>Update Lead Status</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of MODS question code with Lead Attributes and various actions need to be performed after each response. This object also helps to define theater specific lead qualification and routing questions.</description>
    <label>NGCC QA and Lead Mapping</label>
</CustomObject>